# shufflestorm

./: .gitignore  README.md  allpairs.py  instructions.md  main.py  pyproject.toml  shufflestorm.ipynb  shufflestorm_runner.ipynb  triplejoin.py
data/: bikedekho-small.csv  bikedekho.csv  bikewale.csv
experiments/: run_experiment_allpairs_reducer_size.py  run_experiment_triplejoin_relation_reducers.py  run_experiment_triplejoin_relation_size.py
report/: main.tex
results/: bikedekho-small_results.json  bikedekho_results.json  bikewale_results.json  citeseer_results.json
results/[all_pairs] experiment_reducer_size/: bikedekho-small_1000reducer_results.json  bikedekho-small_100reducer_results.json  bikedekho-small_200reducer_results.json  bikedekho-small_500reducer_results.json  bikedekho_1000reducer_results.json  bikedekho_100reducer_results.json  bikedekho_500reducer_results.json  bikewale_1000reducer_results.json  bikewale_100reducer_results.json  bikewale_200reducer_results.json  bikewale_500reducer_results.json
results/[triple_join] experiment_reducers_number/: 100000_100_triplejoin_results.json  100000_12_triplejoin_results.json  100000_24_triplejoin_results.json  100000_36_triplejoin_results.json  100000_4_triplejoin_results.json  bikedekho_200reducer_results.json
results/[triple_join] experiment_relation_size/: 100000_24_triplejoin_results.json  10000_24_triplejoin_results.json  (+2 more)
shufflestorm/: afrati_matcher.py  binary_join.py  data_generator.py  group_matcher.py  naive_matcher.py  sql_join.py  sql_matcher.py  ternary_join.py  utils.py
(+11 files in other folders)
